# transient-minecraft

./: Dockerfile  LICENSE  eula.txt  pyproject.toml  requirements.txt  setup.py
aws/: startup.sh
gcloud/: startup.sh
minecraft/: cloud.py  server.py
transient_minecraft/gcloud/: startup.sh
transient_minecraft/minecraft/: cloud.py  server.py
