[tool.poetry]
name = "transient-minecraft"
version = "0.1.0"
description = ""
authors = ["Dev Chakraborty <devchakraborty@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
environs = "^7.3.0"
awscli = "^1.18.26"
google-api-python-client = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "transient_minecraft.minecraft.server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
